@@ -61,7 +61,7 @@ public class CheckHits {
       ignore.add(Integer.valueOf(results[i]));
     }
     
-    int maxDoc = searcher.maxDoc();
+    int maxDoc = searcher.getIndexReader().maxDoc();
     for (int doc = 0; doc < maxDoc; doc++) {
       if (ignore.contains(Integer.valueOf(doc))) continue;
 
